syntax = "proto3";

option csharp_namespace = "ProductShop";

service Product {
	rpc SaveProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
	string name = 1;
	double price = 2;
	int32 categoryId = 3;
}

message ProductResponse {
	bool isSuccess = 1;
}